--- a/Cloudents.Core.Spitball/package.json
+++ b/Cloudents.Core.Spitball/package.json
@@ -2,7 +2,24 @@
   "name": "myproject",
   "version": "1.0.0",
   "devDependencies": {
-    "@types/angular": "^1.6.32"
+    "@types/webpack-env": "^1.13.0",
+    "aspnet-webpack": "^2.0.1",
+    "awesome-typescript-loader": "^3.0.0",
+    "css-loader": "^0.25.0",
+    "event-source-polyfill": "^0.0.7",
+    "extract-text-webpack-plugin": "^2.0.0-rc",
+    "file-loader": "^0.9.0",
+    "isomorphic-fetch": "^2.2.1",
+    "style-loader": "^0.13.1",
+    "typescript": "^2.2.1",
+    "url-loader": "^0.5.7",
+    "vue": "^2.2.2",
+    "vue-loader": "^11.1.4",
+    "vue-property-decorator": "^5.0.1",
+    "vue-router": "^2.3.0",
+    "vue-template-compiler": "^2.2.2",
+    "webpack": "^2.2.0",
+    "webpack-hot-middleware": "^2.12.2"
   },
   "dependencies": {}
 }
