--- a/Cloudents.Core.Spitball/tsconfig.json
+++ b/Cloudents.Core.Spitball/tsconfig.json
@@ -1,19 +1,17 @@
 {
   "compilerOptions": {
-    "noImplicitAny": true,
-    "noEmitOnError": true,
-    "removeComments": false,
-    "sourceMap": false,
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "module": "es2015",
+    "moduleResolution": "node",
     "target": "es5",
-    "outDir": "./wwwroot/scripts",
-    "alwaysStrict": true,
-    "module": "system",
-    "rootDir": "./Scripts"
+    "sourceMap": true,
+    "skipDefaultLibCheck": true,
+    "strict": true,
+    "types": [ "webpack-env" ]
   },
-  
-  "compileOnSave": true,
   "exclude": [
-    "node_modules",
-    "wwwroot"
+    "bin",
+    "node_modules"
   ]
 }
