--- a/Cloudents.Core.Spitball/package.json
+++ b/Cloudents.Core.Spitball/package.json
@@ -2,9 +2,7 @@
   "name": "myproject",
   "version": "1.0.0",
   "devDependencies": {
-    "@types/webpack-env": "^1.13.0",
     "aspnet-webpack": "^2.0.1",
-    "awesome-typescript-loader": "^3.0.0",
     "css-loader": "^0.25.0",
     "event-source-polyfill": "^0.0.7",
     "extract-text-webpack-plugin": "^2.0.0-rc",
@@ -13,18 +11,17 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "style-loader": "^0.13.1",
-    "typescript": "^2.2.1",
     "url-loader": "^0.5.7",
     "vue-loader": "^11.1.4",
     "vue-property-decorator": "^5.0.1",
     "vue-template-compiler": "^2.2.2",
     "webpack": "^2.2.0",
-    "webpack-hot-middleware": "^2.12.2",
-    "vue-svg-sprite": "^1.1.0"
+    "webpack-hot-middleware": "^2.12.2"
   },
   "dependencies": {
     "vue": "^2.4.2",
     "vue-resource": "^1.3.4",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vue-svg-sprite": "^1.1.0"
   }
 }
