--- a/Cloudents.Core.Spitball/Cloudents.Core.Spitball.csproj
+++ b/Cloudents.Core.Spitball/Cloudents.Core.Spitball.csproj
@@ -10,6 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\components\sections\aside\navbar.ts" />
+    <None Remove="ClientApp\components\sections\sections.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="ClientApp\components\sections\aside\navbar.vue.html" />
     <Content Include="ClientApp\components\sections\header\header.vue.html" />
     <Content Include="ClientApp\components\sections\icons.css">
@@ -49,12 +54,21 @@
     <WCFMetadata Include="Connected Services" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\components\sections\aside\navbar.ts" />
+    <TypeScriptCompile Include="ClientApp\components\sections\sections.ts" />
     <TypeScriptCompile Include="ClientApp\components\home\home.ts" />
     
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Zbang.Zbox.Infrastructure\Zbang.Zbox.Infrastructure.csproj" />
+  </ItemGroup>
+
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
@@ -65,12 +79,14 @@
     <!-- In development, the dist files won't exist on the first run or when cloning to
          a different machine, so rebuild them if not already present. -->
     <Message Importance="high" Text="Performing first-run Webpack build..." />
+    <Exec Command="node node_modules/webpack/bin/webpack.js --config webpack.config.vendor.js" />
     <Exec Command="node node_modules/webpack/bin/webpack.js" />
   </Target>
 
   <Target Name="PublishRunWebpack" AfterTargets="ComputeFilesToPublish">
     <!-- As part of publishing, ensure the JS resources are freshly built in production mode -->
     <Exec Command="npm install" />
+    <Exec Command="node node_modules/webpack/bin/webpack.js --config webpack.config.vendor.js --env.prod" />
     <Exec Command="node node_modules/webpack/bin/webpack.js --env.prod" />
 
     <!-- Include the newly-built files in the publish output -->
