--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -17,6 +17,7 @@
     "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
     "vue-template-compiler": "^2.4.2",
+    "vue-carousel": "^0.6.5",
     "extract-text-webpack-plugin": "^3.0.0"
   }
 }
