--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^2.7.0",
     "vue-template-compiler": "^2.4.2",
     "vue-carousel": "^0.6.5",
+    "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0"
   }
 }
