--- a/Cloudents.Web/.babelrc
+++ b/Cloudents.Web/.babelrc
@@ -1,4 +1,4 @@
 ﻿{
   "presets": ["env"],
-  "plugins": ["syntax-dynamic-import"]
+  "plugins": ["syntax-dynamic-import","transform-object-rest-spread"]
 }
