--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -20,10 +20,12 @@
     "vue-carousel": "^0.6.5",
     "vuex": "^2.4.0",
     "css-loader": "^0.28.7",
+    "style-loader": "^0.18.2",
     "extract-text-webpack-plugin": "^3.0.0",
     "tree-model": "^1.0.6",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "vue-infinite-loading": "^2.2.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0"
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "vuetify": "^0.15.7"
   }
 }
