--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -26,6 +26,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "vue-infinite-loading": "^2.2.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "vuetify": "^0.15.7"
+    "vuetify": "^0.15.7",
+    "url-loader":  "^0.5.9" 
   }
 }
