--- a/Zbang.Cloudents.Mvc4WebRole/bower.json
+++ b/Zbang.Cloudents.Mvc4WebRole/bower.json
@@ -10,6 +10,7 @@
     "oclazyload": "1.0.9",
     "angular-plupload": "0.1.6",
     "angular-vs-repeat": "1.1.7",
+    "angular-google-analytics": "^1.1.9",
     "clipboard": "1.5.15",
     "ngclipboard": "1.1.1",
     "@types/angular": "*",
