--- a/Cloudents.Infrastructure/packages.config
+++ b/Cloudents.Infrastructure/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Autofac" version="4.6.1" targetFramework="net47" />
   <package id="AutoMapper" version="6.1.1" targetFramework="net47" />
+  <package id="CacheManager.Core" version="1.1.1" targetFramework="net47" />
+  <package id="CacheManager.StackExchange.Redis" version="1.1.1" targetFramework="net47" />
   <package id="Dapper" version="1.50.2" targetFramework="net47" />
   <package id="Google.Apis" version="1.29.1" targetFramework="net47" />
   <package id="Google.Apis.Auth" version="1.29.1" targetFramework="net47" />
@@ -14,6 +16,7 @@
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.10" targetFramework="net47" />
   <package id="Microsoft.Spatial" version="7.2.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
+  <package id="StackExchange.Redis.StrongName" version="1.2.1" targetFramework="net47" />
   <package id="System.IO" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.Http" version="4.3.1" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
