--- a/Cloudents.Infrastructure.Test/packages.config
+++ b/Cloudents.Infrastructure.Test/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.0.1" targetFramework="net471" />
+  <package id="Autofac.Extras.Moq" version="4.2.0" targetFramework="net471" />
+  <package id="Castle.Core" version="4.0.0" targetFramework="net471" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net471" />
   <package id="Microsoft.EntityFrameworkCore" version="2.0.1" targetFramework="net471" />
   <package id="Microsoft.EntityFrameworkCore.InMemory" version="2.0.1" targetFramework="net471" />
@@ -13,12 +16,16 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net471" />
   <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net471" />
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net471" />
+  <package id="Moq" version="4.7.0" targetFramework="net471" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net471" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net471" />
   <package id="Remotion.Linq" version="2.1.1" targetFramework="net471" />
   <package id="System.Collections" version="4.0.11" targetFramework="net471" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net471" />
+  <package id="System.Collections.NonGeneric" version="4.0.1" targetFramework="net471" />
   <package id="System.ComponentModel.Annotations" version="4.4.0" targetFramework="net471" />
+  <package id="System.ComponentModel.Primitives" version="4.1.0" targetFramework="net471" />
+  <package id="System.ComponentModel.TypeConverter" version="4.1.0" targetFramework="net471" />
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net471" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net471" />
   <package id="System.Interactive.Async" version="3.1.1" targetFramework="net471" />
