--- a/Cloudents.Web.Test/Cloudents.Web.Test.csproj
+++ b/Cloudents.Web.Test/Cloudents.Web.Test.csproj
@@ -219,6 +219,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DocumentControllerTests.cs" />
     <Compile Include="HelpControllerTests.cs" />
     <Compile Include="HomeControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
