--- a/Cloudents.Infrastructure.Test/Cloudents.Infrastructure.Test.csproj
+++ b/Cloudents.Infrastructure.Test/Cloudents.Infrastructure.Test.csproj
@@ -161,6 +161,7 @@
     <Compile Include="EfRepositoryTests.cs" />
     <Compile Include="LuisAiTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CacheResultInterceptorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
