--- a/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
+++ b/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="Dapper" Version="1.50.4" />
     <PackageReference Include="Google.Apis.Customsearch.v1" Version="1.30.0.896" />
     <PackageReference Include="Google.Apis.YouTube.v3" Version="1.30.0.1035" />
+    <PackageReference Include="Microsoft.Azure.CognitiveServices.Search.CustomSearch" Version="1.1.0-preview" />
     <PackageReference Include="Microsoft.Azure.DocumentDB" Version="1.19.1" />
     <PackageReference Include="Microsoft.Azure.Search" Version="4.0.1-preview" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
