--- a/Zbang.Cloudents.Jared/packages.config
+++ b/Zbang.Cloudents.Jared/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.6.1" targetFramework="net462" />
+  <package id="Autofac.Extras.DynamicProxy" version="4.2.1" targetFramework="net47" />
   <package id="Autofac.Owin" version="4.1.0" targetFramework="net462" />
   <package id="Autofac.SignalR" version="3.0.2" targetFramework="net462" />
   <package id="Autofac.WebApi2" version="4.1.0" targetFramework="net462" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net45" />
+  <package id="Castle.Core" version="4.0.0" targetFramework="net47" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net462" />
@@ -43,7 +45,7 @@
   <package id="StackExchange.Redis.StrongName" version="1.2.4" targetFramework="net462" />
   <package id="Strathweb.CacheOutput.WebApi2" version="0.10.0" targetFramework="net462" />
   <package id="Swashbuckle.Core" version="5.4.0" targetFramework="net47" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net47" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.4.403061554" targetFramework="net462" />
   <package id="System.IO" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net47" />
